<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="entry"
            type="org.flauschhaus.traces.journal.entry.JournalEntry" />
    </data>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="org.flauschhaus.traces.journal.entry.JournalEntryCRUDActivity"
        tools:showIn="@layout/activity_journal_entry_crud">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_journal_entry_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hint_journal_entry_text"
                android:inputType="textMultiLine"
                android:lines="6"
                android:text="@={entry.text}" />

            <EditText
                android:id="@+id/edit_journal_entry_highlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/hint_journal_entry_highlight"
                android:inputType="textMultiLine"
                android:lines="3"
                android:text="@={entry.highlight}"/>

            <SeekBar
                android:id="@+id/seek_journal_entry_rating"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:max="10"
                android:progress="@={entry.rating}"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

            <Button
                android:id="@+id/button_journal_entry_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@android:string/ok" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</layout>