<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.flauschhaus.traces.journal.entry.JournalEntryCRUDActivity">
    <item
        android:id="@+id/action_crud_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:title="@string/action_crud_delete"
        app:showAsAction="withText" />
</menu>
